--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,11 @@
 			<artifactId>dropwizard-core</artifactId>
 			<version>0.8.2</version>
 		</dependency>
+		<dependency>
+			<groupId>io.dropwizard</groupId>
+			<artifactId>dropwizard-assets</artifactId>
+			<version>0.8.2</version>
+		</dependency>
 	</dependencies>
 
 
